--- a/test.html
+++ b/test.html
@@ -10,7 +10,7 @@
     <p><strong>Resultado:</strong> <span id="output"></span></p>
 
     <script type="module">
-      import { BrowserMultiFormatReader } from "https://cdn.jsdelivr.net/npm/@zxing/browser@0.1.1/+esm";
+      import { BrowserMultiFormatReader } from "https://unpkg.com/@zxing/browser@latest";
 
       const codeReader = new BrowserMultiFormatReader();
       const videoElement = document.getElementById("preview");
