--- a/test.html
+++ b/test.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Lector de Códigos de Barras</title>
+  <title>Lector de Códigos de Barras 0.03</title>
   <script src="https://unpkg.com/@zxing/browser@latest"></script>
 </head>
 <body>
