--- a/test.html
+++ b/test.html
@@ -2,11 +2,11 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Lector de Códigos de Barras 0.03</title>
+  <title>Lector de Códigos de Barras</title>
   <script src="https://unpkg.com/@zxing/browser@latest"></script>
 </head>
 <body>
-  <h1>Escanear Código de Barras</h1>
+  <h1>Escanear Código de Barras 0.03</h1>
   <video id="video" width="300" height="200" style="border: 1px solid gray"></video>
   <p>Resultado: <span id="result"></span></p>
 
