--- a/test.html
+++ b/test.html
@@ -8,7 +8,7 @@
 <body>
   <h1>Escanear Código de Barras 0.03</h1>
   <video id="video" width="300" height="200" style="border: 1px solid gray"></video>
-  <p>Resultado: <span id="result"></span></p>
+  <p>Resultado!: <span id="result"></span></p>
 
   <script>
     window.addEventListener('load', function () {
