--- a/test.html
+++ b/test.html
@@ -1,56 +1,69 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <title>Escáner automático</title>
+  <meta charset="UTF-8" />
+  <title>Escanear con cámara elegida</title>
 </head>
 <body>
-  <h2>Escanear código de barras</h2>
-  <video id="preview" autoplay></video>
+  <h2>Elegí una cámara</h2>
+  <ul id="camera-list"></ul>
+
+  <h2>Escáner</h2>
+  <video id="preview" width="300" height="200" autoplay></video>
   <p><strong>Resultado:</strong> <span id="output"></span></p>
 
   <script type="module">
     import { BrowserMultiFormatReader } from 'https://cdn.jsdelivr.net/npm/@zxing/browser@0.1.1/+esm';
 
-    const codeReader = new BrowserMultiFormatReader();
     const videoElement = document.getElementById('preview');
     const output = document.getElementById('output');
+    const listElement = document.getElementById('camera-list');
+    const codeReader = new BrowserMultiFormatReader();
 
-    const getBestCameraId = async () => {
-      const devices = await navigator.mediaDevices.enumerateDevices();
-      const videoDevices = devices.filter(device => device.kind === 'videoinput');
-
-      // Intentar encontrar una cámara trasera que NO diga "wide"
-      const backCams = videoDevices.filter(device =>
-        /back|rear/i.test(device.label) && !/wide|ultrawide/i.test(device.label)
-      );
-
-      // Si encontramos una trasera sin wide, la usamos. Si no, usamos la primera trasera.
-      if (backCams.length > 0) return backCams[0].deviceId;
-
-      const anyBack = videoDevices.find(device => /back|rear/i.test(device.label));
-      if (anyBack) return anyBack.deviceId;
-
-      // Si no hay pistas, usamos la primera cámara
-      return videoDevices[0]?.deviceId || null;
-    };
-
-    const initScanner = async () => {
-      const bestDeviceId = await getBestCameraId();
-      if (!bestDeviceId) {
-        alert('No se pudo encontrar una cámara disponible.');
+    async function listarCamaras() {
+      try {
+        // Necesario para que los labels estén disponibles
+        await navigator.mediaDevices.getUserMedia({ video: true });
+      } catch (err) {
+        alert("Tenés que permitir acceso a la cámara.");
         return;
       }
 
-      codeReader.decodeFromVideoDevice(bestDeviceId, videoElement, (result, err) => {
+      const devices = await navigator.mediaDevices.enumerateDevices();
+      const videoDevices = devices.filter(device => device.kind === 'videoinput');
+
+      if (videoDevices.length === 0) {
+        listElement.innerHTML = '<li>No se encontraron cámaras</li>';
+        return;
+      }
+
+      videoDevices.forEach((device, index) => {
+        const li = document.createElement('li');
+        li.textContent = `Cámara ${index + 1}: ${device.label || 'Sin nombre'} — ID: ${device.deviceId}`;
+
+        const btn = document.createElement('button');
+        btn.textContent = 'Usar esta';
+        btn.onclick = () => iniciarEscaneo(device.deviceId);
+
+        li.appendChild(document.createElement('br'));
+        li.appendChild(btn);
+        listElement.appendChild(li);
+      });
+    }
+
+    function iniciarEscaneo(deviceId) {
+      output.textContent = '';
+      codeReader.reset(); // Detiene escaneo anterior
+
+      codeReader.decodeFromVideoDevice(deviceId, videoElement, (result, err) => {
         if (result) {
           output.textContent = result.getText();
-          codeReader.reset(); // detener luego de leer
+          codeReader.reset(); // Detener después de primer lectura
         }
       });
-    };
+    }
 
-    initScanner();
+    listarCamaras();
   </script>
 </body>
 </html>
